crates/valib-wdf/src/snapshots/valib_wdf__diode__tests__diode_clipper_lambertw.snap
---
source: crates/valib-wdf/src/diode.rs
expression: "&output"
---
-0.1504
-0.2652
-0.2471
-0.2549
-0.2487
-0.2494
-0.2465
-0.2452
-0.2431
-0.2412
-0.2392
-0.2371
-0.2349
-0.2326
-0.2302
-0.2278
-0.2252
-0.2224
-0.2196
-0.2166
-0.2134
-0.21
-0.2065
-0.2027
-0.1986
-0.1943
-0.1896
-0.1846
-0.1792
-0.1733
-0.167
-0.16
-0.1523
-0.1439
-0.1346
-0.1243
-0.113
-0.1005
-0.0868
-0.0719
-0.0556
-0.0382
-0.0198
-0.0004
0.0196
0.0399
0.0601
0.0797
0.0983
0.1152
0.1302
0.1431
0.154
0.1633
0.1712
0.1781
0.1843
0.1898
0.1948
0.1994
0.2037
0.2076
0.2113
0.2147
0.2179
0.2209
0.2238
0.2266
0.2292
0.2316
0.234
0.2363
0.2384
0.2405
0.2425
0.2445
0.2463
0.2481
0.2498
0.2515
0.2531
0.2547
0.0483
-0.2266
-0.2627
-0.2461
-0.2528
-0.2471
-0.2473
-0.2446
-0.2431
-0.241
-0.239
-0.2369
-0.2347
-0.2324
-0.23
-0.2276
-0.2249
-0.2222
-0.2193
-0.2163
-0.2131
-0.2098
-0.2062
-0.2024
-0.1983
-0.1939
-0.1893
-0.1842
-0.1788
-0.1729
-0.1664
-0.1594
-0.1517
-0.1432
-0.1338
-0.1235
-0.112
-0.0995
-0.0857
-0.0706
-0.0543
-0.0368
-0.0182
0.0012
0.0212
0.0415
0.0617
0.0813
0.0997
0.1165
0.1313
0.1441
0.1548
0.164
0.1718
0.1786
0.1847
0.1902
0.1952
0.1998
0.204
0.2079
0.2115
0.215
0.2182
0.2212
0.2241
0.2268
0.2294
0.2318
0.2342
0.2364
0.2386
0.2407
0.2427
0.2446
0.2465
0.2482
0.25
0.2516
0.2533
0.2548
0.0487
-0.2262
-0.2626
-0.246
-0.2526
-0.247
-0.2472
-0.2444
-0.243
-0.2408
-0.2389
-0.2367
-0.2345
-0.2322
-0.2299
-0.2274
-0.2247
-0.222
-0.2191
-0.2161
-0.2129
-0.2095
-0.2059
-0.2021
-0.198
-0.1936
-0.1889
-0.1838
-0.1783
-0.1724
-0.1659
-0.1588
-0.151
-0.1424
-0.133
-0.1226
-0.1111
-0.0984
-0.0845
-0.0693
-0.0529
-0.0353
-0.0167
0.0028
0.0228
0.0431
0.0633
0.0828
0.1011
0.1178
0.1324
0.145
0.1556
0.1646
0.1724
0.1792
0.1852
0.1906
0.1956
0.2001
0.2043
0.2082
0.2118
0.2152
0.2184
0.2214
0.2243
0.227
0.2296
0.232
0.2344
0.2366
0.2388
0.2408
0.2428
0.2448
0.2466
0.2484
0.2501
0.2518
0.2534
0.255
0.0491
-0.2258
-0.2625
-0.2459
-0.2525
-0.2469
-0.247
-0.2443
-0.2428
-0.2407
