crates/valib-wdf/src/snapshots/valib_wdf__diode__tests__diode_clipper_model.snap
---
source: crates/valib-wdf/src/diode.rs
expression: "&output"
---
-0.6977
-0.7597
-0.7001
-0.7535
-0.701
-0.747
-0.7007
-0.7401
-0.6993
-0.7326
-0.6967
-0.7244
-0.693
-0.7153
-0.6879
-0.7049
-0.681
-0.6926
-0.6715
-0.6774
-0.658
-0.6567
-0.6358
-0.6212
-0.5888
-0.5549
-0.5209
-0.4869
-0.4529
-0.4188
-0.3848
-0.3508
-0.3168
-0.2828
-0.2488
-0.2148
-0.1808
-0.1468
-0.1127
-0.0787
-0.0447
-0.0107
0.0233
0.0573
0.0913
0.1253
0.1594
0.1934
0.2274
0.2614
0.2954
0.3294
0.3634
0.3974
0.4314
0.4655
0.4995
0.5335
0.5675
0.6015
0.6322
0.651
0.6619
0.6713
0.6786
0.6851
0.6907
0.6958
0.7003
0.7045
0.7083
0.7119
0.7152
0.7183
0.7213
0.724
0.7267
0.7292
0.7315
0.7338
0.736
0.7381
-0.5066
-0.7686
-0.6591
-0.7608
-0.6756
-0.7531
-0.6829
-0.7453
-0.6861
-0.7371
-0.6868
-0.7282
-0.6854
-0.7184
-0.682
-0.7074
-0.6764
-0.6945
-0.668
-0.6786
-0.6552
-0.6569
-0.6334
-0.6197
-0.586
-0.5522
-0.5182
-0.4842
-0.4501
-0.4161
-0.3821
-0.3481
-0.3141
-0.2801
-0.2461
-0.2121
-0.178
-0.144
-0.11
-0.076
-0.042
-0.008
0.026
0.06
0.0941
0.1281
0.1621
0.1961
0.2301
0.2641
0.2981
0.3321
0.3661
0.4002
0.4342
0.4682
0.5022
0.5362
0.5702
0.6042
0.6342
0.652
0.6627
0.6719
0.6791
0.6856
0.6911
0.6962
0.7006
0.7048
0.7086
0.7122
0.7155
0.7186
0.7215
0.7243
0.7269
0.7294
0.7317
0.734
0.7361
0.7382
-0.5049
-0.7684
-0.6589
-0.7606
-0.6755
-0.7529
-0.6828
-0.7451
-0.686
-0.7368
-0.6866
-0.7279
-0.6852
-0.7181
-0.6817
-0.707
-0.6761
-0.694
-0.6676
-0.6779
-0.6546
-0.6559
-0.6322
-0.6174
-0.5834
-0.5495
-0.5154
-0.4814
-0.4474
-0.4134
-0.3794
-0.3454
-0.3114
-0.2774
-0.2433
-0.2093
-0.1753
-0.1413
-0.1073
-0.0733
-0.0393
-0.0053
0.0287
0.0628
0.0968
0.1308
0.1648
0.1988
0.2328
0.2668
0.3008
0.3349
0.3689
0.4029
0.4369
0.4709
0.5049
0.5389
0.5729
0.607
0.636
0.653
0.6635
0.6725
0.6797
0.6861
0.6915
0.6965
0.701
0.7051
0.7089
0.7124
0.7157
0.7188
0.7217
0.7245
0.7271
0.7295
0.7319
0.7342
0.7363
0.7384
-0.5033
-0.7682
-0.6588
-0.7604
-0.6753
-0.7527
-0.6826
-0.7448
-0.6858
-0.7365
